# RealTime-Video-Orchestrator

./: .gitignore  Cargo.toml  rust-toolchain.toml
.github/workflows/: ci.yml
config/: rvo.yaml
crates/rvo-bench/: Cargo.toml
crates/rvo-bench/benches/: micro.rs
crates/rvo-bench/src/: lib.rs
crates/rvo-bin/: Cargo.toml
crates/rvo-bin/src/: main.rs  runtime.rs
crates/rvo-buffer/: Cargo.toml
crates/rvo-buffer/src/: buffer.rs  lib.rs
crates/rvo-camera/: Cargo.toml
crates/rvo-camera/src/: camera.rs  lib.rs  mock.rs
crates/rvo-clips/: Cargo.toml
crates/rvo-clips/src/: clip.rs  encoder.rs  lib.rs  manager.rs
crates/rvo-config/: Cargo.toml
crates/rvo-config/src/: config.rs  lib.rs
crates/rvo-core/: Cargo.toml
crates/rvo-core/src/: time.rs
crates/rvo-detector/: Cargo.toml
crates/rvo-detector/src/: detector.rs  dummy.rs  jitter.rs  lib.rs  load.rs
crates/rvo-events/: Cargo.toml
crates/rvo-events/src/: engine.rs  event.rs  lib.rs  publisher.rs
crates/rvo-metrics/: Cargo.toml
crates/rvo-metrics/src/: lib.rs  metrics.rs
crates/rvo-remote/: Cargo.toml  build.rs
crates/rvo-remote/proto/: detector.proto
crates/rvo-remote/src/: lib.rs
crates/rvo-remote/tests/: grpc_pipeline.rs
crates/rvo-scenarios/src/: lib.rs
crates/rvo-scheduler/: Cargo.toml
crates/rvo-scheduler/src/: scheduler.rs
crates/rvo-signals/: Cargo.toml
crates/rvo-signals/src/: store.rs
crates/rvo-testkit/src/: capture.rs  detectors.rs
demo/: README.md  gen_protos.sh  requirements.txt  run_demo.sh
demo/services/: model_service.py
docs/: ARCHITECTURE.md  BENCHMARKING.md  BENCHMARK_PERFORMANCE.md  BENCHMARK_REMEDIATION_REPORT.md  BENCHMARK_VALIDITY_AUDIT.md  CURRENT_IMPLEMENTATION.md  DEVELOPER_GUIDE.md  ISSUES_AND_LEFTOVERS.md  LOW_LATENCY_SYSTEMS.md  PLOT_GUIDE.md  README.md  ROADMAP.md  Systems Research Literature Review Generation.md
rvo-deployment/: rvo-bin
rvo-deployment/config/: rvo-remote.yaml
schemas/: event.schema.json  meta.schema.json  models.py  models.ts
scripts/: bench.sh  generate_sdks.sh  plot.py
sdk/: README.md  test_sdks.sh
sdk/go/: detector.pb.go  detector_grpc.pb.go  go.mod
sdk/node/: detector.ts  package-lock.json  package.json  tsconfig.json
sdk/python/: detector_pb2.py  detector_pb2_grpc.py  requirements.txt
