[package]
name = "rvo-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
crossbeam-channel = "0.5"
clap = { version = "4", features = ["derive"] }
opencv        = { version = "0.88", default-features = false }
rvo-buffer    = { path = "../rvo-buffer" }
rvo-clips     = { path = "../rvo-clips" }
rvo-detector  = { path = "../rvo-detector" }
rvo-events    = { path = "../rvo-events" }
rvo-metrics   = { path = "../rvo-metrics" }
rvo-scheduler = { path = "../rvo-scheduler" }
rvo-signals   = { path = "../rvo-signals" }
rvo-testkit   = { path = "../rvo-testkit" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "micro"
harness = false

[[bin]]
name = "load_harness"
path = "src/bin/load_harness.rs"
