[package]
name = "rvo-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
# External dependencies
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
signal-hook = "0.3"
crossbeam-channel = "0.5"
clap = { version = "4", features = ["derive"] }
# TUI dashboard (rvo-tui binary). Uses ratatui's re-exported crossterm to avoid
# version skew.
ratatui = "0.29"
# Used by rvo-tui to redirect library/native stdout+stderr away from the screen.
libc = "0.2"
# Web POC (rvo-web binary): reuse the tiny_http server + JSON.
tiny_http = "0.12"
serde_json = "1.0"

# Workspace dependencies
rvo-scheduler = { path = "../rvo-scheduler" }
rvo-config = { path = "../rvo-config" }
rvo-detector = { path = "../rvo-detector" }
rvo-camera = { path = "../rvo-camera" }
rvo-clips = { path = "../rvo-clips" }
rvo-metrics = { path = "../rvo-metrics" }
rvo-events = { path = "../rvo-events" }
rvo-signals = { path = "../rvo-signals" }
rvo-buffer  = { path = "../rvo-buffer" }
rvo-remote  = { path = "../rvo-remote" }

[dev-dependencies]
rvo-testkit = { path = "../rvo-testkit" }
